--- a/README.adoc
+++ b/README.adoc
@@ -8,11 +8,11 @@
 
 == Demo
 
-=== Install Kafka Operator
+=== Kafka Operator
 
 Our first step is to install the Kafka Operator. We will use the Strimzi Operator for this task.
 
-==== Steps to install Operator
+==== Installing Kafka Operator (Strimzi)
 
 * Access the Administrator console
 * Click on Operators -> OperatorHub
@@ -39,7 +39,7 @@ image::2-10-2020-09-47-53-AM.png[]
 
 image::2-10-2020-09-48-39-AM.png[] 
 
-=== Create Namespace
+=== Projects/Namespaces
 
 * From the Administrator perspective, click on `Project` and then `Create Project` on the right corner
 
@@ -57,7 +57,9 @@ image::2-10-2020-09-54-47-AM.png[]
 
 image::2-10-2020-09-55-16-AM.png[] 
 
-=== Install Cluster Kafka
+=== Kafka Broker
+
+==== Kafka Cluster
 
 * Go to the Developer Perspective
 
@@ -123,7 +125,9 @@ kubectl get kafka -n kafka-demo
 
 image::4-10-2020-17-01-50-PM.png[] 
 
-=== Customize Dev Console
+=== Developer Console
+
+==== Customizing the Dev Console
 
 image::2-10-2020-10-02-47-AM.png[] 
 
@@ -159,7 +163,7 @@ image::4-10-2020-10-21-31-AM.png[]
 
 image::4-10-2020-10-22-17-AM.png[] 
 
-=== Explore the Dev Console
+==== Explore the Dev Console
 
 * After Kafka cluster is fully installed, you can see the Details, Resources and Monitoring
 
@@ -171,9 +175,9 @@ image::2-10-2020-10-35-06-AM.png[]
 
 image::2-10-2020-10-36-20-AM.png[] 
 
-=== Create Topics
+==== Create Topics
 
-==== Create Topic Using KafkaTopic
+===== Create Topic Using KafkaTopic
 
 * Make sure you are in the right project and click on `Add` -> `Operator Backed`
 
@@ -251,7 +255,7 @@ kubectl -n $KAFKA_NAMESPACE exec -it $KAFKA_BROKER_POD -c kafka -- bin/kafka-top
 
 image::2-10-2020-11-36-48-AM.png[] 
 
-==== Create Topic Using Kafka CLI
+===== Create Topic Using Kafka CLI
 
 Create topic using kafka-topics.sh
 
@@ -319,7 +323,7 @@ Anything you write in the producer tab, will be shown in the consumer tab.
 
 image::2-10-2020-17-58-00-PM.png[] 
 
-=== Deploy VR
+=== VR Application
 
 Take note of the bootstrap service from your kafka cluster. We will need it in the next labs.
 
@@ -365,7 +369,7 @@ Add the following by the end of the url: `/webjars/swagger-ui/2.1.0/index.html?u
 
 image::3-10-2020-10-50-02-AM.png[] 
 
-=== Deploy Consumer and Producer
+=== Consumer and Producer Application
 
 Now let's create another topic: `forth-topic`
 
@@ -430,7 +434,7 @@ Your terminal should be like this:
 
 image::4-10-2020-19-00-43-PM.png[] 
 
-=== Change the cluster config
+==== Change the cluster config
 
 [update-cluster]
 Now let's change the Kafka configuration.
@@ -476,7 +480,7 @@ spec:
 
 And then click on `Save` button.
 
-=== Deploy Topic View
+=== Topic View Application
 
 Now let's deploy a Topic View app. Run in your terminal:
 
@@ -497,7 +501,7 @@ You will see this:
 
 image::5-10-2020-09-12-24-AM.png[] 
 
-=== Scale Kafka Cluster
+==== Scale Kafka Cluster
 
 Before we scale our cluster, let's create two more topics.
 
@@ -731,7 +735,7 @@ image::5-10-2020-10-50-41-AM.png[]
 
 We can improve it by increasing the rebalance goals.
 
-=== Install monitoring
+=== Monitoring
 
 [source,yaml]
 ----
